[package]
name = "signal-id"
categories = ["embedded", "no-std"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The HAL crates 
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
rp2040-hal = { version = "0.5", features = ["rt"] }
